android_library(
    name = "androidAppModule2",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule2",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule13",
        "//androidAppModule15",
        "//androidAppModule18",
        "//androidAppModule19",
        "//androidAppModule20",
        "//androidAppModule21",
        "//androidAppModule22",
        "//androidAppModule23",
        "//androidAppModule25",
        "//androidAppModule26",
        "//androidAppModule27",
        "//androidAppModule28",
        "//androidAppModule29",
        "//androidAppModule9",
        "//module0",
        "//module16",
        "//module19",
        "//module21",
        "//module23",
        "//module24",
        "//module25",
        "//module26",
        "//module27",
        "//module29",
        "//module3",
        "//module4",
        "//module6",
        "//module7",
        "//module9"
    ],
)
        