load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule2",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule2",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule28",
        "//module19",
        "//module4",
        "//androidAppModule22",
        "//module29",
        "//androidAppModule19",
        "//androidAppModule26",
        "//androidAppModule9",
        "//androidAppModule20",
        "//module16",
        "//module27",
        "//module25",
        "//androidAppModule18",
        "//androidAppModule27",
        "//module7",
        "//module24",
        "//module0",
        "//module21",
        "//androidAppModule13",
        "//module9",
        "//module26",
        "//androidAppModule15",
        "//androidAppModule23",
        "//androidAppModule21",
        "//module23",
        "//module6",
        "//androidAppModule25",
        "//androidAppModule29",
        "//module3",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)