load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule20",
    srcs = glob(["src/main/java/**/*.java"]), 
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule20",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule23",
        "//androidAppModule26",
        "//androidAppModule28",
        "//module1",
        "//module10",
        "//module12",
        "//module13",
        "//module20",
        "//module24",
        "//module27",
        "//module5",
        "//module6",
        "//module9",
        gmaven_artifact("com.android.support:appcompat-v7:aar:26.1.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.0.2"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.1")
    ],
)
        