load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule21",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule21",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule23",
        "//androidAppModule25",
        "//androidAppModule26",
        "//androidAppModule27",
        "//androidAppModule28",
        "//module1",
        "//module12",
        "//module13",
        "//module15",
        "//module18",
        "//module2",
        "//module20",
        "//module22",
        "//module23",
        "//module25",
        "//module26",
        "//module27",
        "//module28",
        "//module6",
        "//module7",
        "//module9",
        gmaven_artifact("com.android.support:appcompat-v7:aar:26.1.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.0.2"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.1")
    ],
)
        