android_library(
    name = "androidAppModule22",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule22",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule23",
        "//androidAppModule24",
        "//androidAppModule25",
        "//androidAppModule26",
        "//androidAppModule27",
        "//module0",
        "//module10",
        "//module11",
        "//module12",
        "//module14",
        "//module15",
        "//module16",
        "//module17",
        "//module18",
        "//module2",
        "//module20",
        "//module21",
        "//module23",
        "//module24",
        "//module26",
        "//module29",
        "//module3",
        "//module6",
        "//module7",
        "//module8"
    ],
)
        