load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule22",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule22",
    visibility = ["//visibility:public"],
    deps = [
        "//androidAppModule24",
        "//module18",
        "//module26",
        "//module14",
        "//module15",
        "//module12",
        "//module0",
        "//module11",
        "//module23",
        "//module2",
        "//module6",
        "//androidAppModule23",
        "//androidAppModule26",
        "//module20",
        "//module29",
        "//module21",
        "//module3",
        "//module7",
        "//androidAppModule25",
        "//module16",
        "//module8",
        "//androidAppModule27",
        "//module17",
        "//module24",
        "//module10",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)