load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule23",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule23",
    visibility = ["//visibility:public"],
    deps = [
        "//module24",
        "//module22",
        "//module28",
        "//module7",
        "//module9",
        "//module12",
        "//module23",
        "//module26",
        "//module16",
        "//module29",
        "//module13",
        "//module6",
        "//module21",
        "//androidAppModule24",
        "//androidAppModule26",
        "//module5",
        "//module8",
        "//module3",
        "//module17",
        "//module10",
        "//module19",
        "//module11",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)