load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule24",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule24",
    visibility = ["//visibility:public"], 
    deps = [
        "//androidAppModule26",
        "//androidAppModule27",
        "//androidAppModule28",
        "//androidAppModule29",
        "//module0",
        "//module1",
        "//module10",
        "//module11",
        "//module12",
        "//module14",
        "//module15",
        "//module16",
        "//module17",
        "//module19",
        "//module2",
        "//module21",
        "//module23",
        "//module25",
        "//module26",
        "//module27",
        "//module29",
        "//module3",
        "//module4",
        "//module6",
        "//module7",
        gmaven_artifact("com.android.support:appcompat-v7:aar:26.1.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.0.2"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.1")
    ],
)
        