load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule24",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule24",
    visibility = ["//visibility:public"],
    deps = [
        "//module19",
        "//androidAppModule26",
        "//module11",
        "//module21",
        "//module29",
        "//module26",
        "//module4",
        "//module3",
        "//module16",
        "//module1",
        "//module15",
        "//module25",
        "//module27",
        "//androidAppModule27",
        "//module10",
        "//module0",
        "//module2",
        "//module12",
        "//module6",
        "//androidAppModule29",
        "//module7",
        "//androidAppModule28",
        "//module17",
        "//module14",
        "//module23",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)