load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule25",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule25",
    visibility = ["//visibility:public"],
    deps = [
        "//module8",
        "//module24",
        "//androidAppModule29",
        "//module20",
        "//module29",
        "//module4",
        "//module27",
        "//module0",
        "//module13",
        "//module17",
        "//module10",
        "//module18",
        "//androidAppModule26",
        "//androidAppModule28",
        "//module12",
        "//module28",
        "//module7",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)