load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

android_library(
    name = "androidAppModule26",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_files = glob(["src/main/res/**/*"]),
    manifest = "src/main/AndroidManifest.xml",
    custom_package = "com.androidAppModule26",
    visibility = ["//visibility:public"],
    deps = [
        "//module12",
        "//module21",
        "//module10",
        "//module23",
        "//module8",
        "//module6",
        "//module3",
        "//module17",
        "//module9",
        "//module26",
        "//module2",
        "//module4",
        "//module20",
        "//module18",
        "//module14",
        "//module15",
        "//module11",
        gmaven_artifact("com.android.support:appcompat-v7:aar:28.0.0"),
        gmaven_artifact("com.android.support.constraint:constraint-layout:aar:1.1.3"),
        gmaven_artifact("com.android.support:multidex:aar:1.0.3"),
        gmaven_artifact("com.android.support.test:runner:aar:1.0.2"),
        gmaven_artifact("com.android.support.test.espresso:espresso-core:aar:3.0.2")
    ],
)